--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>devAgentService</artifactId>
+	<version>100.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>DevAgentService</name>
 	<description>Demo project for Spring Boot</description>
@@ -52,6 +52,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>-->
+
+		<!-- https://mvnrepository.com/artifact/org.gradle/gradle-tooling-api -->
+		<dependency>
+			<groupId>org.gradle</groupId>
+			<artifactId>gradle-tooling-api</artifactId>
+			<version>7.3-20210825160000+0000</version>
+			<!--<scope>runtime</scope>-->
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
